--- a/package.json
+++ b/package.json
@@ -1,7 +1,41 @@
 {
-  "name": "anime_vault",
-  "version": "0.1.0",
+  "name": "anime-vault",
+  "version": "1.0.1",
   "private": true,
+  "author": {
+    "name": "Sanidhya Kumar Verma",
+    "email": "sanidhya.verma12345@gmail.com",
+    "url": "https://sanidhy.me"
+  },
+  "description": "Your favorite anime, all in one place.",
+  "keywords": [
+    "html",
+    "css",
+    "react",
+    "reactjs",
+    "anime",
+    "anime website",
+    "infinite scroll",
+    "api",
+    "framer motion",
+    "3d animations",
+    "modern",
+    "modern ui",
+    "modern ux",
+    "tailwindcss",
+    "javascript",
+    "js"
+  ],
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sanidhyy/anime-vault.git"
+  },
+  "homepage": "https://github.com/sanidhyy/anime-vault#readme",
+  "bugs": {
+    "url": "https://github.com/sanidhyy/anime-vault/issues",
+    "email": "sanidhya.verma12345@gmail.com"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -25,5 +59,15 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
-  }
+  },
+  "funding": [
+    {
+      "type": "patreon",
+      "url": "https://www.patreon.com/sanidhy"
+    },
+    {
+      "type": "Buy me a coffee",
+      "url": "https://www.buymeacoffee.com/sanidhy"
+    }
+  ]
 }
